2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Define COPYRIGHT_YEAR.
	* Makefile.am (dist-hook): Test it.
	* sed/mbcs.c: Fix copyright years.
	* sed/sed.c: Fix copyright years.  Change COPYRIGHT_NOTICE to
	COPYRIGHT_YEAR.
	* sed/utils.c: Fix copyright years.
	* testsuite/version.gin: Use COPYRIGHT_YEAR.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* sed/compile.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/execute.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/utils.c: Declare bool arguments as int instead to please AIX XLC.
	* sed/utils.h: Declare bool arguments as int instead to please AIX XLC.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: XFAIL bsd test where appropriate.

2009-05-11  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Do not create homonymous links from builddir to srcdir.
	* testsuite/Makefile.tests: Create readin.in2 here.
	* testsuite/Makefile.am: Do not distribute it.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* testsuite/Makefile.tests: Handle CRLF endings for mingw.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>
 
	* autoboot.conf: Add rename.
	* gnulib: Update.

2009-04-27  Paolo Bonzini  <bonzini@gnu.org>

	* configure.ac: Link readin.in2 into builddir.
	* configure: Regenerate.
	* doc/Makefile.am: Do not distribute sed.html.  Do not update
	sed.texi if the output does not change.
	* sed/Makefile.am: Order libraries according to their dependencies.
	* sed/compile.c (get_openfile): Declare FAIL as int.
	* sed/sed.c: Avoid printf ("") if REG_PERL is not defined.
	* testsuite/eval.in2: Do not include in the repository.
	* testsuite/Makefile.am: Clean always eval.in2 and never readin.in2.
	* testsuite/Makefile.tests: Provide a default empty definition of TIME
	and remove rules for readin.in2.

2009-03-31  Paolo Bonzini  <bonzini@gnu.org>

	* bootstrap.sh.in: Add __bool_true_false_are_defined.
	* bootstrap.sh: Regenerate.