@@ -47,5 +47,6 @@ Tom R.Hageman <tom@basil.icce.rug.nl>
 Ulrich Drepper <drepper@redhat.com>
 Vladimir Volovich <vvv@vvv.vsu.ru>
 Wichert Akkerman <wakkerma@debian.org>
+Zhongxing Xu <xuzhongxing@gmail.com>
 
 And the GNU translation teams.
