@@ -1,7 +1,7 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH SUPER-SED "1" "April 2009" "super-sed version 3.63" "User Commands"
+.TH SED "1" "May 2009" "sed version 4.2" "User Commands"
 .SH NAME
-super-sed \- stream editor for filtering and transforming text
+sed \- stream editor for filtering and transforming text
 .SH SYNOPSIS
 .B sed
 [\fIOPTION\fR]... \fI{script-only-if-no-other-script} \fR[\fIinput-file\fR]...
@@ -52,10 +52,6 @@ disable all GNU extensions.
 .IP
 use extended regular expressions in the script.
 .HP
-\fB\-R\fR, \fB\-\-regexp\-perl\fR
-.IP
-use Perl 5's regular expressions syntax in the script.
-.HP
 \fB\-s\fR, \fB\-\-separate\fR
 .IP
 consider files as separate rather than as a single continuous
@@ -77,10 +73,10 @@ non-option argument is taken as the sed script to interpret.  All
 remaining arguments are names of input files; if no input files are
 specified, then the standard input is read.
 .PP
-E-mail bug reports to: <bonzini@gnu.org>.
-Be sure to include the word ``ssed'' somewhere in the ``Subject:'' field.
-.PP
-based on GNU sed version 4.2
+GNU sed home page: <http://www.gnu.org/software/sed/>.
+General help using GNU software: <http://www.gnu.org/gethelp/>.
+E-mail bug reports to: <bug-gnu-utils@gnu.org>.
+Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
 .SH "COMMAND SYNOPSIS"
 This is just a brief synopsis of \*(sd commands to serve as
 a reminder to those who already know \*(sd;
@@ -371,7 +367,7 @@ Be sure to include the word ``sed'' somewhere in the ``Subject:'' field.
 Also, please include the output of ``sed --version'' in the body
 of your report if at all possible.
 .SH COPYRIGHT
-Copyright \(co 2003 Free Software Foundation, Inc.
+Copyright \(co 2009 Free Software Foundation, Inc.
 .br
 This is free software; see the source for copying conditions.  There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE,
@@ -394,11 +390,11 @@ the \*(sd FAQ (http://sed.sf.net/grabbag/tutorials/sedfaq.txt),
 http://sed.sf.net/grabbag/.
 .PP
 The full documentation for
-.B super-sed
+.B sed
 is maintained as a Texinfo manual.  If the
 .B info
 and
-.B super-sed
+.B sed
 programs are properly installed at your site, the command
 .IP
 .B info sed
